Complete Readers Dashbaord - several inconsistencies to be  adjusted

--- a/Browse.html
+++ b/Browse.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Transactions Section</title>
-    <link rel="stylesheet" href="./TransactionsStyle.css"> <!-- Linking the CSS file here -->
+    <title>Browse Section</title>
+    <link rel="stylesheet" href="./Browse.css">
 </head>
 <body>
 
