--- a/UserSettings.html
+++ b/UserSettings.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Transactions Section</title>
+    <title>Settings Section</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"> <!-- Font Awesome Icons -->
-    <link rel="stylesheet" href="./Settings.css"> <!-- Linking the CSS file -->
+    <link rel="stylesheet" href="./UserSettings.css"> <!-- Linking the CSS file -->
+
 </head>
 <body>
 
-<div class="Scontent-box" id="content2">
+<div class="Scontent-box" id="settings-content">
     <div class="container">
         <h3 id="sett-header">User Profile</h3>
         <hr>
@@ -27,6 +28,7 @@
             </div>
                                     
             <!-- Input section starts here -->
+
             <div class="input-section" id="info-box">
                 <label for="fullname">Full Name</label>
                 <div class="input-icon">
@@ -36,7 +38,7 @@
                     </span>
                 </div>
 
-                <label for="username">User Name</label>
+                <label for="email">User Name</label>
                 <div class="input-icon">
                     <input type="text" id="username" name="username" placeholder="Daisy Lyn Laygan" disabled>
                     <span class="pencil-icon">
@@ -110,8 +112,8 @@
                 <button class="usersave-btn">
                     Save
                 </button>
-                <button class="userupdate-btn" id="cancelsetbtn">
-                    Cancel
+                <button class="usercancel-btn">
+                    Save
                 </button>
             </div>  
         </div>
