Added burger icon

--- a/Dashboard.html
+++ b/Dashboard.html
@@ -46,7 +46,7 @@
             </div>
 
             <!-- Pie Chart -->
-            <div class="chart-container pie-container" style="margin-top: 0;">
+            <div class="chart-container pie-container">
                 <h3>Transaction Overview</h3> <!-- Title for the chart -->
                 <canvas id="myPieChart"></canvas>
                 <!-- Labels similar to the image -->
@@ -62,7 +62,7 @@
         <!-- Right Side Section -->
         <div class="col-md-8" id="body-side">
             <div class="chart-container" style="margin-top: 0; height: 642px">
-                <canvas id="myBarChart" style=" height:100%;"></canvas>
+                <canvas id="myBarChart"></canvas>
             </div>
         </div>
     </div>
