--- a/BootDash.html
+++ b/BootDash.html
@@ -25,7 +25,13 @@
 <body>
     <div class="container-fluid" style="padding: 0;">
         <div class="row">
+            <div id="burger-icon" onclick="toggleSidebar()">
+                <img src="./Images/burgerIcon.svg" alt="Menu" width="24" height="24">
+            </div>
             <div id="sidebar" class="col-2">
+                <div id="burger-icon" onclick="toggleSidebar()">
+                    <img src="./Images/burgerIcon.svg" alt="Menu" width="24" height="24">
+                </div>
                 <h3 id="brand-name">LiBorrow.</h3>
                 <ul id="nav-list">
                     <li>
@@ -125,7 +131,9 @@
     </div>
 
     <script>
-        
+            function toggleSidebar() {
+        document.getElementById('sidebar').classList.toggle('active');
+    }
         function toggleSubmenu() {
             const submenu = document.getElementById('submenu');
             const icon = document.getElementById('submenu-toggle-icon');
