--- a/BookRequest.html
+++ b/BookRequest.html
@@ -43,7 +43,8 @@
                         <img src="./Images/Divine-Comedy.svg" alt="Book one" class="book-image" id="book-loc" >
                         <img src="./Images/Rating Component.svg" alt="rating one" id="rating-image" width="150" height="150">
                         <p id="B-title">The Divine Comedy</p>
-                        <p id="Book-Author">Request Date: 08/20/2024</p>
+                        <p id="Book-Author">Dante Alighieri</p>
+                        <p id="Req-Date">Request Date: 08/20/2024</p>
                         <button id="borbtn2">Cancel</button>
                 </div>
 
@@ -53,7 +54,7 @@
                         <img src="./Images/Rating Component.svg" alt="rating one" id="rating-image" width="150" height="150">
                         <p id="B-title">Cull of the Wild</p>
                         <p id="Book-Author">Hugh Warwick</p>
-                        <p id="Book-Author">Request Date: 08/20/2024</p>
+                        <p id="Req-Date">Request Date: 08/20/2024</p>
                         <button id="borbtn2">Cancel</button>
                 </div>
                  <!-- Div 4 -->
@@ -62,7 +63,7 @@
                         <img src="./Images/Rating Component.svg" alt="rating one" id="rating-image" width="150" height="150">
                         <p id="B-title">In Search of Lost Time</p>
                         <p id="Book-Author">Marcel Proust</p>
-                        <p id="Book-Author">Request Date: 08/20/2024</p>
+                        <p id="Req-Date">Request Date: 08/20/2024</p>
                         <button id="borbtn2">Cancel</button>
                 </div>
                 <!-- Div 5 -->
@@ -71,7 +72,7 @@
                         <img src="./Images/Rating Component.svg" alt="rating one" id="rating-image" width="150" height="150">
                         <p id="B-title">Lolita</p>
                         <p id="Book-Author">Vladimir Nabocov</p>
-                        <p id="Book-Author">Request Date: 08/20/2024</p>
+                        <p id="Req-Date">Request Date: 08/20/2024</p>
                         <button id="borbtn2">Cancel</button>
                 </div>
                 <!-- Div 6 -->
@@ -80,7 +81,7 @@
                         <img src="./Images/Rating Component.svg" alt="rating one" id="rating-image" width="150" height="150">
                         <p id="B-title">Moby Dick</p>
                         <p id="Book-Author">Herman Melville</p>
-                        <p id="Book-Author">Request Date: 08/20/2024</p>
+                        <p id="Req-Date">Request Date: 08/20/2024</p>
                         <button id="borbtn2">Cancel</button>
                 </div>
                  <!-- Div 7 -->
@@ -89,7 +90,7 @@
                         <img src="./Images/Rating Component.svg" alt="rating one" id="rating-image" width="150" height="150">
                         <p id="B-title">Jane Eyre</p>
                         <p id="Book-Author">Charlotte Bronte</p>
-                        <p id="Book-Author">Request Date: 08/20/2024</p>
+                        <p id="Req-Date">Request Date: 08/20/2024</p>
                         <button id="borbtn2">Cancel</button>
                 </div>
                 <!-- Div 8-->
@@ -98,7 +99,7 @@
                         <img src="./Images/Rating Component.svg" alt="rating one" id="rating-image" width="150" height="150">
                         <p id="B-title">War Peace</p>
                         <p id="Book-Author">Leo Tolstoy</p>
-                        <p id="Book-Author">Request Date: 08/20/2024</p>
+                        <p id="Req-Date">Request Date: 08/20/2024</p>
                         <button id="borbtn2">Cancel</button>
                 </div>
                
