--- a/Browse.html
+++ b/Browse.html
@@ -109,149 +109,150 @@
             </div>
             <h3 id="All-Books">All Books</h3>
             <div class="pendbox global" id="User-books">
-
-                <!-- Div 1 -->
-                <div class="book-container">
-                    <div class="button-container">
-                        <button id="stats-btn">
-                            <img  src="./Images/Unavalable.svg" alt="Book status" class="book-status" id="bookstaticon" width="30" height="30">
-                            Borrowed
-                        </button>
-                        <button id="addtofav-btn">
-                            <img src="./Images/fav.svg" alt="Book fav" class="book-fav" >
-                        </button>
+                <div class="userbooks-container">
+                    <!-- Div 1 -->
+                    <div class="book-container">
+                        <div class="button-container">
+                            <button id="stats-btn">
+                                <img  src="./Images/Unavalable.svg" alt="Book status" class="book-status" id="bookstaticon" width="30" height="30">
+                                Borrowed
+                            </button>
+                            <button id="addtofav-btn">
+                                <img src="./Images/fav.svg" alt="Book fav" class="book-fav" >
+                            </button>
+                        </div>
+                            <img src="./Images/BioG.svg" alt="Book one" class="book-image">
+                            <img src="./Images/Rating Component.svg" alt="rating one" id="rating-image" width="150" height="150">
+                            <p id="B-title">Biography of X</p>
+                            <p id="Book-Author">Catherine Lacey</p>
+                            <button id="borbtn">Borrow</button>
                     </div>
-                        <img src="./Images/BioG.svg" alt="Book one" class="book-image">
-                        <img src="./Images/Rating Component.svg" alt="rating one" id="rating-image" width="150" height="150">
-                        <p id="B-title">Biography of X</p>
-                        <p id="Book-Author">Catherine Lacey</p>
-                        <button id="borbtn">Borrow</button>
-                </div>
 
-                <!-- Div 2 -->
-                <div class="book-container">
-                    <div class="button-container">
-                        <button id="stats-btn2">
-                            <img  src="./Images/Check.svg" alt="Book status" class="book-status" id="bookstaticon" width="30" height="30">
-                            Borrowed
-                        </button>
-                        <button id="addtofav-btn">
-                            <img src="./Images/fav.svg" alt="Book fav" class="book-fav" >
-                        </button>
+                    <!-- Div 2 -->
+                    <div class="book-container">
+                        <div class="button-container">
+                            <button id="stats-btn2">
+                                <img  src="./Images/Check.svg" alt="Book status" class="book-status" id="bookstaticon" width="30" height="30">
+                                Borrowed
+                            </button>
+                            <button id="addtofav-btn">
+                                <img src="./Images/fav.svg" alt="Book fav" class="book-fav" >
+                            </button>
+                        </div>
+                            <img src="./Images/cull of.svg" alt="Book one" class="book-image">
+                            <img src="./Images/Rating Component.svg" alt="rating one" id="rating-image" width="150" height="150">
+                            <p id="B-title">Cull of the Wild</p>
+                            <p id="Book-Author">Catherine Lacey</p>
+                            <button id="borbtn2">Borrow</button>
                     </div>
-                        <img src="./Images/cull of.svg" alt="Book one" class="book-image">
-                        <img src="./Images/Rating Component.svg" alt="rating one" id="rating-image" width="150" height="150">
-                        <p id="B-title">Cull of the Wild</p>
-                        <p id="Book-Author">Catherine Lacey</p>
-                        <button id="borbtn2">Borrow</button>
-                </div>
 
-                <!-- Div 3 -->
-                <div class="book-container">
-                    <div class="button-container">
-                        <button id="stats-btn2">
-                            <img  src="./Images/Check.svg" alt="Book status" class="book-status" id="bookstaticon" width="30" height="30">
-                            Borrowed
-                        </button>
-                        <button id="addtofav-btn">
-                            <img src="./Images/fav.svg" alt="Book fav" class="book-fav" >
-                        </button>
+                    <!-- Div 3 -->
+                    <div class="book-container">
+                        <div class="button-container">
+                            <button id="stats-btn2">
+                                <img  src="./Images/Check.svg" alt="Book status" class="book-status" id="bookstaticon" width="30" height="30">
+                                Borrowed
+                            </button>
+                            <button id="addtofav-btn">
+                                <img src="./Images/fav.svg" alt="Book fav" class="book-fav" >
+                            </button>
+                        </div>
+                            <img src="./Images/Catch.svg" alt="Book one" class="book-image">
+                            <img src="./Images/Rating Component.svg" alt="rating one" id="rating-image" width="150" height="150">
+                            <p id="B-title">Ctach - 22</p>
+                            <p id="Book-Author">Catherine Lacey</p>
+                            <button id="borbtn2">Borrow</button>
                     </div>
-                        <img src="./Images/Catch.svg" alt="Book one" class="book-image">
-                        <img src="./Images/Rating Component.svg" alt="rating one" id="rating-image" width="150" height="150">
-                        <p id="B-title">Ctach - 22</p>
-                        <p id="Book-Author">Catherine Lacey</p>
-                        <button id="borbtn2">Borrow</button>
-                </div>
 
-                <!-- Div 4 -->
-                <div class="book-container">
-                    <div class="button-container">
-                        <button id="stats-btn">
-                            <img  src="./Images/Unavalable.svg" alt="Book status" class="book-status" id="bookstaticon" width="30" height="30">
-                            Borrowed
-                        </button>
-                        <button id="addtofav-btn">
-                            <img src="./Images/fav.svg" alt="Book fav" class="book-fav" >
-                        </button>
+                    <!-- Div 4 -->
+                    <div class="book-container">
+                        <div class="button-container">
+                            <button id="stats-btn">
+                                <img  src="./Images/Unavalable.svg" alt="Book status" class="book-status" id="bookstaticon" width="30" height="30">
+                                Borrowed
+                            </button>
+                            <button id="addtofav-btn">
+                                <img src="./Images/fav.svg" alt="Book fav" class="book-fav" >
+                            </button>
+                        </div>
+                            <img src="./Images/crime and punishment.svg" alt="Book one" class="book-image">
+                            <img src="./Images/Rating Component.svg" alt="rating one" id="rating-image" width="150" height="150">
+                            <p id="B-title">Crime and Punishment</p>
+                            <p id="Book-Author">Catherine Lacey</p>
+                            <button id="borbtn">Borrow</button>
                     </div>
-                        <img src="./Images/crime and punishment.svg" alt="Book one" class="book-image">
-                        <img src="./Images/Rating Component.svg" alt="rating one" id="rating-image" width="150" height="150">
-                        <p id="B-title">Crime and Punishment</p>
-                        <p id="Book-Author">Catherine Lacey</p>
-                        <button id="borbtn">Borrow</button>
-                </div>
 
-                <!-- Div 5 -->
-                <div class="book-container">
-                    <div class="button-container">
-                        <button id="stats-btn2">
-                            <img  src="./Images/Check.svg" alt="Book status" class="book-status" id="bookstaticon" width="30" height="30">
-                            Borrowed
-                        </button>
-                        <button id="addtofav-btn">
-                            <img src="./Images/fav.svg" alt="Book fav" class="book-fav" >
-                        </button>
+                    <!-- Div 5 -->
+                    <div class="book-container">
+                        <div class="button-container">
+                            <button id="stats-btn2">
+                                <img  src="./Images/Check.svg" alt="Book status" class="book-status" id="bookstaticon" width="30" height="30">
+                                Borrowed
+                            </button>
+                            <button id="addtofav-btn">
+                                <img src="./Images/fav.svg" alt="Book fav" class="book-fav" >
+                            </button>
+                        </div>
+                            <img src="./Images/pride and prejudice.svg" alt="Book one" class="book-image">
+                            <img src="./Images/Rating Component.svg" alt="rating one" id="rating-image" width="150" height="150">
+                            <p id="B-title">Pirde and Prejudice</p>
+                            <p id="Book-Author">Jane Austen</p>
+                            <button id="borbtn2">Borrow</button>
                     </div>
-                        <img src="./Images/pride and prejudice.svg" alt="Book one" class="book-image">
-                        <img src="./Images/Rating Component.svg" alt="rating one" id="rating-image" width="150" height="150">
-                        <p id="B-title">Pirde and Prejudice</p>
-                        <p id="Book-Author">Jane Austen</p>
-                        <button id="borbtn2">Borrow</button>
-                </div>
 
-                <!-- Div 6 -->
-                <div class="book-container">
-                    <div class="button-container">
-                        <button id="stats-btn3">
-                            <img  src="./Images/Reading.svg" alt="Book status" class="book-status" id="bookstaticon" width="30" height="30">
-                            Currently Reading
-                        </button>
-                        <button id="addtofav-btn">
-                            <img src="./Images/fav.svg" alt="Book fav" class="book-fav" >
-                        </button>
+                    <!-- Div 6 -->
+                    <div class="book-container">
+                        <div class="button-container">
+                            <button id="stats-btn3">
+                                <img  src="./Images/Reading.svg" alt="Book status" class="book-status" id="bookstaticon" width="30" height="30">
+                                Currently Reading
+                            </button>
+                            <button id="addtofav-btn">
+                                <img src="./Images/fav.svg" alt="Book fav" class="book-fav" >
+                            </button>
+                        </div>
+                            <img src="./Images/sherlock.svg" alt="Book one" class="book-image">
+                            <img src="./Images/Rating Component.svg" alt="rating one" id="rating-image" width="150" height="150">
+                            <p id="B-title">The Great Adventure...</p>
+                            <p id="Book-Author">Catherine Lacey</p>
+                            <button id="borbtn2">Borrow</button>
                     </div>
-                        <img src="./Images/sherlock.svg" alt="Book one" class="book-image">
-                        <img src="./Images/Rating Component.svg" alt="rating one" id="rating-image" width="150" height="150">
-                        <p id="B-title">The Great Adventure...</p>
-                        <p id="Book-Author">Catherine Lacey</p>
-                        <button id="borbtn2">Borrow</button>
-                </div>
 
-                <!-- Div 7 -->
-                <div class="book-container">
-                    <div class="button-container">
-                        <button id="stats-btn">
-                            <img  src="./Images/Unavalable.svg" alt="Book status" class="book-status" id="bookstaticon" width="30" height="30">
-                            Borrowed
-                        </button>
-                        <button id="addtofav-btn">
-                            <img src="./Images/fav.svg" alt="Book fav" class="book-fav" >
-                        </button>
+                    <!-- Div 7 -->
+                    <div class="book-container">
+                        <div class="button-container">
+                            <button id="stats-btn">
+                                <img  src="./Images/Unavalable.svg" alt="Book status" class="book-status" id="bookstaticon" width="30" height="30">
+                                Borrowed
+                            </button>
+                            <button id="addtofav-btn">
+                                <img src="./Images/fav.svg" alt="Book fav" class="book-fav" >
+                            </button>
+                        </div>
+                            <img src="./Images/beloved.svg" alt="Book one" class="book-image">
+                            <img src="./Images/Rating Component.svg" alt="rating one" id="rating-image" width="150" height="150">
+                            <p id="B-title">Beloved</p>
+                            <p id="Book-Author">Catherine Lacey</p>
+                            <button id="borbtn">Borrow</button>
                     </div>
-                        <img src="./Images/beloved.svg" alt="Book one" class="book-image">
-                        <img src="./Images/Rating Component.svg" alt="rating one" id="rating-image" width="150" height="150">
-                        <p id="B-title">Beloved</p>
-                        <p id="Book-Author">Catherine Lacey</p>
-                        <button id="borbtn">Borrow</button>
-                </div>
 
-                <!-- Div 8 -->
-                <div class="book-container">
-                    <div class="button-container">
-                        <button id="stats-btn3">
-                            <img  src="./Images/Reading.svg" alt="Book status" class="book-status" id="bookstaticon" width="30" height="30">
-                            Currently Reading
-                        </button>
-                        <button id="addtofav-btn">
-                            <img src="./Images/fav.svg" alt="Book fav" class="book-fav" >
-                        </button>
+                    <!-- Div 8 -->
+                    <div class="book-container">
+                        <div class="button-container">
+                            <button id="stats-btn3">
+                                <img  src="./Images/Reading.svg" alt="Book status" class="book-status" id="bookstaticon" width="30" height="30">
+                                Currently Reading
+                            </button>
+                            <button id="addtofav-btn">
+                                <img src="./Images/fav.svg" alt="Book fav" class="book-fav" >
+                            </button>
+                        </div>
+                            <img src="./Images/handmaid.svg" alt="Book one" class="book-image" id="book-opacity">
+                            <img src="./Images/Rating Component.svg" alt="rating one" id="rating-image" width="150" height="150">
+                            <p id="B-title">The Handmaid's Tale</p>
+                            <p id="Book-Author">Catherine Lacey</p>
+                            <button id="borbtn2">Return</button>
                     </div>
-                        <img src="./Images/handmaid.svg" alt="Book one" class="book-image" id="book-opacity">
-                        <img src="./Images/Rating Component.svg" alt="rating one" id="rating-image" width="150" height="150">
-                        <p id="B-title">The Handmaid's Tale</p>
-                        <p id="Book-Author">Catherine Lacey</p>
-                        <button id="borbtn2">Return</button>
                 </div>
             </div>
             
