Revert "Merge branch 'BackEndMain' of https://github.com/BrylDG/Liborrow into BackEndMain"
This reverts commit 5d8ab616caaf2733551fde372c085e501d834449, reversing
changes made to 13769d0e75dee87458096979473169b3d059fcbf.

--- a/Favorites.html
+++ b/Favorites.html
@@ -10,7 +10,7 @@
 
 <div class="content-box" id="content2">
     <div class="container">
-        <div class="Userinput" id="search-bok">
+        <div class="Userinput" id="search-boks">
             <div class="search-bar">
                 <input type="text" placeholder=" Search...">
                 <span class="forsearch-icon">
